@@ -1,4 +1,5 @@
 Copyright (c) 2002 Mattias Eriksson <snaggen@users.sourceforge.net>
+Copyright (c) 2007 Mark Ellis <mark@mpellis.org.uk>
 
 Permission is hereby granted, free of charge, to any person obtaining a copy of
 this software and associated documentation files (the "Software"), to deal in
